--- a/Backend/Bluvolt/src/main/resources/templates/lojaEmpresa.html
+++ b/Backend/Bluvolt/src/main/resources/templates/lojaEmpresa.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bluvolt - Painel do Vendedor</title>
+
+    <link rel="icon" type="image/webp" th:href="@{/imagens/logo-bluvolt.webp}">
+    <link rel="apple-touch-icon" th:href="@{/imagens/logo-bluvolt.png}">
+    <link rel="icon" sizes="32x32" th:href="@{/imagens/logo-bluvolt.png}">
+    <link rel="icon" sizes="16x16" th:href="@{/imagens/logo-bluvolt.png}">
+
     <link rel="stylesheet" th:href="@{/css/lojaEmpresa.css}">
     <link rel="stylesheet" th:href="@{/css/loja.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -13,7 +19,7 @@
     <div class="eco-navbar-brand">Bluvolt - Painel</div>
     <div class="eco-navbar-links">
         <a href="#" class="eco-nav-link active">Dashboard</a>
-        <a href="testeEmpresa.html" class="eco-nav-link">Chat</a>
+        <a href="perfilConsumidor.html" class="eco-nav-link">Chat</a>
     </div>
     <div class="eco-user-profile">
         <span id="eco-username" th:text="${nome}"></span>
