--- a/Backend/Bluvolt/src/main/resources/templates/blog.html
+++ b/Backend/Bluvolt/src/main/resources/templates/blog.html
@@ -154,16 +154,19 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #808080;">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/auth/inicio">
                 <img th:src="@{/imagens/logo-bluvolt.png}" alt="BluVolt" class="navbar-logo">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- Itens centrais -->
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/inicio">Início</a>
+                        <a class="nav-link active" href="/auth/inicio">Início</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/auth/services">Serviços</a>
@@ -172,18 +175,35 @@
                         <a class="nav-link" href="/auth/projects">Projetos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/auth/blog">Blog</a>
+                        <a class="nav-link" href="/auth/blog">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/auth/faq">FAQ</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/auth/dashConsumidor">Produtos</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link btn btn-sm btn-secondary text-white ms-2 px-3" href="/auth/contact">Contato</a>
                     </li>
                 </ul>
+
+                <!-- Ações de login/logout -->
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <!-- Mostrar botão de login se usuário não estiver logado -->
+                    <li class="nav-item" th:if="${nome == null}">
                         <a class="nav-link btn btn-sm btn-outline-light px-3" href="/auth/register">Entrar / Cadastrar</a>
+                    </li>
+
+                    <!-- Mostrar dropdown se usuário estiver logado -->
+                    <li class="nav-item dropdown" th:if="${nome != null}">
+                        <a class="nav-link dropdown-toggle btn btn-sm btn-outline-light px-3" href="#" id="userDropdown"
+                           role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Olá, <span th:text="${nome}">Usuário</span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                            <li><a class="dropdown-item" href="/auth/logout">Sair</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
