--- a/Backend/Bluvolt/src/main/resources/templates/register.html
+++ b/Backend/Bluvolt/src/main/resources/templates/register.html
@@ -185,20 +185,35 @@
         <a class="navbar-brand" href="index.html">
             <img th:src="@{/imagens/logo-bluvolt.png}" alt="BluVolt" class="navbar-logo">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a class="nav-link" href="/auth/inicio">Início</a></li>
-                <li class="nav-item"><a class="nav-link" href="/auth/services">Serviços</a></li>
-                <li class="nav-item"><a class="nav-link" href="/auth/projects">Projetos</a></li>
-                <li class="nav-item"><a class="nav-link" href="/auth/blog">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="/auth/faq">FAQ</a></li>
-                <li class="nav-item"><a class="nav-link btn btn-sm btn-secondary text-white ms-2 px-3" href="/auth/contact">Contato</a></li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/auth/inicio">Início</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/auth/services">Serviços</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/auth/projects">Projetos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/auth/blog">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/auth/faq">FAQ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/auth/dashConsumidor">Produtos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn btn-sm btn-secondary text-white ms-2 px-3" href="/auth/contact">Contato</a>
+                </li>
             </ul>
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item" th:if="${tipo == null}">
                     <a class="nav-link btn btn-sm btn-outline-light px-3" href="/auth/register">Entrar / Cadastrar</a>
                 </li>
             </ul>
